X0-Bison.output
Terminals unused in grammar

   CALLSYM
   CASESYM
   EXITSYM
   REPEATSYM
   RR
   RL
   SWITCHSYM
   UNTILSYM
   YARIMASUNESYM
   KIBONOHANASYM


Rules useless in parser due to conflicts

   13 $@6: %empty

   33 statement_list: %empty

   45 statement: %empty

   50 $@9: %empty


State 5 conflicts: 27 shift/reduce, 28 reduce/reduce
State 20 conflicts: 27 shift/reduce, 28 reduce/reduce
State 33 conflicts: 6 shift/reduce
State 36 conflicts: 27 shift/reduce, 28 reduce/reduce
State 56 conflicts: 1 reduce/reduce
State 64 conflicts: 28 shift/reduce, 28 reduce/reduce
State 126 conflicts: 1 reduce/reduce


Grammar

    0 $accept: program $end

    1 $@1: %empty

    2 $@2: %empty

    3 program: MAINSYM $@1 LBRACE statement_list $@2 RBRACE

    4 declaration_list: declaration_list declaration_stat
    5                 | declaration_stat
    6                 | %empty

    7 declaration_stat: typeenum identlist SEMICOLON

    8 $@3: %empty

    9 declaration_stat: typeenum identarraylist $@3 SEMICOLON

   10 $@4: %empty

   11 $@5: %empty

   12 declaration_stat: CONSTSYM typeenum $@4 identlist $@5 SEMICOLON

   13 $@6: %empty

   14 $@7: %empty

   15 declaration_stat: CONSTSYM typeenum $@6 identarraylist $@7 SEMICOLON

   16 identlist: identdef
   17          | identlist COMMA identdef

   18 identdef: IDENT
   19         | IDENT BECOMES factor

   20 typeenum: INTSYM
   21         | STRINGSYM
   22         | BOOLSYM
   23         | REALSYM
   24         | CHARSYM

   25 identarraylist: identarraydef
   26               | identarraylist COMMA identarraydef

   27 identarraydef: IDENT LBRACKET dimensionlist RBRACKET

   28 dimensionlist: dimension
   29              | dimensionlist COMMA dimension

   30 dimension: INTEGER

   31 statement_list: statement_list statement
   32               | statement
   33               | %empty

   34 statement: expression_statement
   35          | if_statement
   36          | while_statement
   37          | read_statement
   38          | write_statement
   39          | compound_statement
   40          | for_statement
   41          | do_statement
   42          | declaration_list
   43          | continue_stat
   44          | break_stat
   45          | %empty

   46 continue_stat: CONTINUESYM SEMICOLON

   47 break_stat: BREAKSYM SEMICOLON

   48 $@8: %empty

   49 if_statement: IFSYM LPAREN expression RPAREN $@8 compound_statement

   50 $@9: %empty

   51 $@10: %empty

   52 if_statement: IFSYM LPAREN expression RPAREN $@9 compound_statement $@10 ELSESYM compound_statement

   53 while_statement: WHILESYM LPAREN expression RPAREN compound_statement

   54 write_statement: WRITESYM LPAREN expression RPAREN SEMICOLON

   55 read_statement: READSYM LPAREN var RPAREN SEMICOLON

   56 compound_statement: LBRACE statement_list RBRACE

   57 for_statement: FORSYM LPAREN expression SEMICOLON expression SEMICOLON expression RPAREN compound_statement

   58 do_statement: DOSYM compound_statement WHILESYM LPAREN expression RPAREN SEMICOLON

   59 var: IDENT
   60    | IDENT LBRACKET expression_list RBRACKET

   61 expression_list: expression
   62                | expression_list COMMA expression

   63 expression_statement: expression SEMICOLON
   64                     | SEMICOLON

   65 $@11: %empty

   66 expression: var $@11 BECOMES expression
   67           | simple_expr

   68 simple_expr: additive_expr
   69            | additive_expr OPR additive_expr
   70            | additive_expr SINGLEOPR
   71            | SINGLEOPR additive_expr

   72 SINGLEOPR: INCPLUS
   73          | INCMINUS
   74          | NOT

   75 OPR: EQL
   76    | NEQ
   77    | LSS
   78    | LEQ
   79    | GTR
   80    | GEQ
   81    | AND
   82    | OR
   83    | XOR

   84 additive_expr: term
   85              | additive_expr PLUSMINUS term

   86 PLUSMINUS: PLUS
   87          | MINUS

   88 term: factor
   89     | term TIMESDEVIDE factor

   90 TIMESDEVIDE: TIMES
   91            | DEVIDE
   92            | MOD

   93 factor: LPAREN expression RPAREN
   94       | var
   95       | INTEGER
   96       | REAL
   97       | STRING
   98       | BOOL
   99       | CHAR
  100       | YAJU


Terminals, with rules where they appear

$end (0) 0
error (256)
BOOLSYM (258) 22
BREAKSYM (259) 47
CALLSYM (260)
CASESYM (261)
CHARSYM (262) 24
CONSTSYM (263) 12 15
CONTINUESYM (264) 46
DOSYM (265) 58
ELSESYM (266) 52
EXITSYM (267)
FORSYM (268) 57
INTSYM (269) 20
IFSYM (270) 49 52
MAINSYM (271) 3
READSYM (272) 55
REALSYM (273) 23
REPEATSYM (274)
RR (275)
RL (276)
STRINGSYM (277) 21
SWITCHSYM (278)
UNTILSYM (279)
WHILESYM (280) 53 58
WRITESYM (281) 54
LBRACE (282) 3 56
RBRACE (283) 3 56
LBRACKET (284) 27 60
RBRACKET (285) 27 60
BECOMES (286) 19 66
COMMA (287) 17 26 29 62
LSS (288) 77
LEQ (289) 78
GTR (290) 79
GEQ (291) 80
EQL (292) 75
NEQ (293) 76
PLUS (294) 86
INCPLUS (295) 72
MINUS (296) 87
INCMINUS (297) 73
TIMES (298) 90
DEVIDE (299) 91
LPAREN (300) 49 52 53 54 55 57 58 93
RPAREN (301) 49 52 53 54 55 57 58 93
MOD (302) 92
SEMICOLON (303) 7 9 12 15 46 47 54 55 57 58 63 64
XOR (304) 83
AND (305) 81
OR (306) 82
NOT (307) 74
YAJU (308) 100
YARIMASUNESYM (309)
KIBONOHANASYM (310)
IDENT (311) 18 19 27 59 60
INTEGER (312) 30 95
STRING (313) 97
CHAR (314) 99
BOOL (315) 98
REAL (316) 96


Nonterminals, with rules where they appear

$accept (62)
    on left: 0
program (63)
    on left: 3, on right: 0
$@1 (64)
    on left: 1, on right: 3
$@2 (65)
    on left: 2, on right: 3
declaration_list (66)
    on left: 4 5 6, on right: 4 42
declaration_stat (67)
    on left: 7 9 12 15, on right: 4 5
$@3 (68)
    on left: 8, on right: 9
$@4 (69)
    on left: 10, on right: 12
$@5 (70)
    on left: 11, on right: 12
$@6 (71)
    on left: 13, on right: 15
$@7 (72)
    on left: 14, on right: 15
identlist (73)
    on left: 16 17, on right: 7 12 17
identdef (74)
    on left: 18 19, on right: 16 17
typeenum (75)
    on left: 20 21 22 23 24, on right: 7 9 12 15
identarraylist (76)
    on left: 25 26, on right: 9 15 26
identarraydef (77)
    on left: 27, on right: 25 26
dimensionlist (78)
    on left: 28 29, on right: 27 29
dimension (79)
    on left: 30, on right: 28 29
statement_list (80)
    on left: 31 32 33, on right: 3 31 56
statement (81)
    on left: 34 35 36 37 38 39 40 41 42 43 44 45, on right: 31 32
continue_stat (82)
    on left: 46, on right: 43
break_stat (83)
    on left: 47, on right: 44
if_statement (84)
    on left: 49 52, on right: 35
$@8 (85)
    on left: 48, on right: 49
$@9 (86)
    on left: 50, on right: 52
$@10 (87)
    on left: 51, on right: 52
while_statement (88)
    on left: 53, on right: 36
write_statement (89)
    on left: 54, on right: 38
read_statement (90)
    on left: 55, on right: 37
compound_statement (91)
    on left: 56, on right: 39 49 52 53 57 58
for_statement (92)
    on left: 57, on right: 40
do_statement (93)
    on left: 58, on right: 41
var (94)
    on left: 59 60, on right: 55 66 94
expression_list (95)
    on left: 61 62, on right: 60 62
expression_statement (96)
    on left: 63 64, on right: 34
expression (97)
    on left: 66 67, on right: 49 52 53 54 57 58 61 62 63 66 93
$@11 (98)
    on left: 65, on right: 66
simple_expr (99)
    on left: 68 69 70 71, on right: 67
SINGLEOPR (100)
    on left: 72 73 74, on right: 70 71
OPR (101)
    on left: 75 76 77 78 79 80 81 82 83, on right: 69
additive_expr (102)
    on left: 84 85, on right: 68 69 70 71 85
PLUSMINUS (103)
    on left: 86 87, on right: 85
term (104)
    on left: 88 89, on right: 84 85 89
TIMESDEVIDE (105)
    on left: 90 91 92, on right: 89
factor (106)
    on left: 93 94 95 96 97 98 99 100, on right: 19 88 89


State 0

    0 $accept: . program $end

    MAINSYM  shift, and go to state 1

    program  go to state 2


State 1

    3 program: MAINSYM . $@1 LBRACE statement_list $@2 RBRACE

    $default  reduce using rule 1 ($@1)

    $@1  go to state 3


State 2

    0 $accept: program . $end

    $end  shift, and go to state 4


State 3

    3 program: MAINSYM $@1 . LBRACE statement_list $@2 RBRACE

    LBRACE  shift, and go to state 5


State 4

    0 $accept: program $end .

    $default  accept


State 5

    3 program: MAINSYM $@1 LBRACE . statement_list $@2 RBRACE

    BOOLSYM      shift, and go to state 6
    BREAKSYM     shift, and go to state 7
    CHARSYM      shift, and go to state 8
    CONSTSYM     shift, and go to state 9
    CONTINUESYM  shift, and go to state 10
    DOSYM        shift, and go to state 11
    FORSYM       shift, and go to state 12
    INTSYM       shift, and go to state 13
    IFSYM        shift, and go to state 14
    READSYM      shift, and go to state 15
    REALSYM      shift, and go to state 16
    STRINGSYM    shift, and go to state 17
    WHILESYM     shift, and go to state 18
    WRITESYM     shift, and go to state 19
    LBRACE       shift, and go to state 20
    INCPLUS      shift, and go to state 21
    INCMINUS     shift, and go to state 22
    LPAREN       shift, and go to state 23
    SEMICOLON    shift, and go to state 24
    NOT          shift, and go to state 25
    YAJU         shift, and go to state 26
    IDENT        shift, and go to state 27
    INTEGER      shift, and go to state 28
    STRING       shift, and go to state 29
    CHAR         shift, and go to state 30
    BOOL         shift, and go to state 31
    REAL         shift, and go to state 32

    BOOLSYM      [reduce using rule 6 (declaration_list)]
    BOOLSYM      [reduce using rule 33 (statement_list)]
    BOOLSYM      [reduce using rule 45 (statement)]
    BREAKSYM     [reduce using rule 6 (declaration_list)]
    BREAKSYM     [reduce using rule 33 (statement_list)]
    BREAKSYM     [reduce using rule 45 (statement)]
    CHARSYM      [reduce using rule 6 (declaration_list)]
    CHARSYM      [reduce using rule 33 (statement_list)]
    CHARSYM      [reduce using rule 45 (statement)]
    CONSTSYM     [reduce using rule 6 (declaration_list)]
    CONSTSYM     [reduce using rule 33 (statement_list)]
    CONSTSYM     [reduce using rule 45 (statement)]
    CONTINUESYM  [reduce using rule 6 (declaration_list)]
    CONTINUESYM  [reduce using rule 33 (statement_list)]
    CONTINUESYM  [reduce using rule 45 (statement)]
    DOSYM        [reduce using rule 6 (declaration_list)]
    DOSYM        [reduce using rule 33 (statement_list)]
    DOSYM        [reduce using rule 45 (statement)]
    FORSYM       [reduce using rule 6 (declaration_list)]
    FORSYM       [reduce using rule 33 (statement_list)]
    FORSYM       [reduce using rule 45 (statement)]
    INTSYM       [reduce using rule 6 (declaration_list)]
    INTSYM       [reduce using rule 33 (statement_list)]
    INTSYM       [reduce using rule 45 (statement)]
    IFSYM        [reduce using rule 6 (declaration_list)]
    IFSYM        [reduce using rule 33 (statement_list)]
    IFSYM        [reduce using rule 45 (statement)]
    READSYM      [reduce using rule 6 (declaration_list)]
    READSYM      [reduce using rule 33 (statement_list)]
    READSYM      [reduce using rule 45 (statement)]
    REALSYM      [reduce using rule 6 (declaration_list)]
    REALSYM      [reduce using rule 33 (statement_list)]
    REALSYM      [reduce using rule 45 (statement)]
    STRINGSYM    [reduce using rule 6 (declaration_list)]
    STRINGSYM    [reduce using rule 33 (statement_list)]
    STRINGSYM    [reduce using rule 45 (statement)]
    WHILESYM     [reduce using rule 6 (declaration_list)]
    WHILESYM     [reduce using rule 33 (statement_list)]
    WHILESYM     [reduce using rule 45 (statement)]
    WRITESYM     [reduce using rule 6 (declaration_list)]
    WRITESYM     [reduce using rule 33 (statement_list)]
    WRITESYM     [reduce using rule 45 (statement)]
    LBRACE       [reduce using rule 6 (declaration_list)]
    LBRACE       [reduce using rule 33 (statement_list)]
    LBRACE       [reduce using rule 45 (statement)]
    RBRACE       reduce using rule 6 (declaration_list)
    RBRACE       [reduce using rule 33 (statement_list)]
    RBRACE       [reduce using rule 45 (statement)]
    INCPLUS      [reduce using rule 6 (declaration_list)]
    INCPLUS      [reduce using rule 33 (statement_list)]
    INCPLUS      [reduce using rule 45 (statement)]
    INCMINUS     [reduce using rule 6 (declaration_list)]
    INCMINUS     [reduce using rule 33 (statement_list)]
    INCMINUS     [reduce using rule 45 (statement)]
    LPAREN       [reduce using rule 6 (declaration_list)]
    LPAREN       [reduce using rule 33 (statement_list)]
    LPAREN       [reduce using rule 45 (statement)]
    SEMICOLON    [reduce using rule 6 (declaration_list)]
    SEMICOLON    [reduce using rule 33 (statement_list)]
    SEMICOLON    [reduce using rule 45 (statement)]
    NOT          [reduce using rule 6 (declaration_list)]
    NOT          [reduce using rule 33 (statement_list)]
    NOT          [reduce using rule 45 (statement)]
    YAJU         [reduce using rule 6 (declaration_list)]
    YAJU         [reduce using rule 33 (statement_list)]
    YAJU         [reduce using rule 45 (statement)]
    IDENT        [reduce using rule 6 (declaration_list)]
    IDENT        [reduce using rule 33 (statement_list)]
    IDENT        [reduce using rule 45 (statement)]
    INTEGER      [reduce using rule 6 (declaration_list)]
    INTEGER      [reduce using rule 33 (statement_list)]
    INTEGER      [reduce using rule 45 (statement)]
    STRING       [reduce using rule 6 (declaration_list)]
    STRING       [reduce using rule 33 (statement_list)]
    STRING       [reduce using rule 45 (statement)]
    CHAR         [reduce using rule 6 (declaration_list)]
    CHAR         [reduce using rule 33 (statement_list)]
    CHAR         [reduce using rule 45 (statement)]
    BOOL         [reduce using rule 6 (declaration_list)]
    BOOL         [reduce using rule 33 (statement_list)]
    BOOL         [reduce using rule 45 (statement)]
    REAL         [reduce using rule 6 (declaration_list)]
    REAL         [reduce using rule 33 (statement_list)]
    REAL         [reduce using rule 45 (statement)]
    $default     reduce using rule 6 (declaration_list)

    declaration_list      go to state 33
    declaration_stat      go to state 34
    typeenum              go to state 35
    statement_list        go to state 36
    statement             go to state 37
    continue_stat         go to state 38
    break_stat            go to state 39
    if_statement          go to state 40
    while_statement       go to state 41
    write_statement       go to state 42
    read_statement        go to state 43
    compound_statement    go to state 44
    for_statement         go to state 45
    do_statement          go to state 46
    var                   go to state 47
    expression_statement  go to state 48
    expression            go to state 49
    simple_expr           go to state 50
    SINGLEOPR             go to state 51
    additive_expr         go to state 52
    term                  go to state 53
    factor                go to state 54


State 6

   22 typeenum: BOOLSYM .

    $default  reduce using rule 22 (typeenum)


State 7

   47 break_stat: BREAKSYM . SEMICOLON

    SEMICOLON  shift, and go to state 55


State 8

   24 typeenum: CHARSYM .

    $default  reduce using rule 24 (typeenum)


State 9

   12 declaration_stat: CONSTSYM . typeenum $@4 identlist $@5 SEMICOLON
   15                 | CONSTSYM . typeenum $@6 identarraylist $@7 SEMICOLON

    BOOLSYM    shift, and go to state 6
    CHARSYM    shift, and go to state 8
    INTSYM     shift, and go to state 13
    REALSYM    shift, and go to state 16
    STRINGSYM  shift, and go to state 17

    typeenum  go to state 56


State 10

   46 continue_stat: CONTINUESYM . SEMICOLON

    SEMICOLON  shift, and go to state 57


State 11

   58 do_statement: DOSYM . compound_statement WHILESYM LPAREN expression RPAREN SEMICOLON

    LBRACE  shift, and go to state 20

    compound_statement  go to state 58


State 12

   57 for_statement: FORSYM . LPAREN expression SEMICOLON expression SEMICOLON expression RPAREN compound_statement

    LPAREN  shift, and go to state 59


State 13

   20 typeenum: INTSYM .

    $default  reduce using rule 20 (typeenum)


State 14

   49 if_statement: IFSYM . LPAREN expression RPAREN $@8 compound_statement
   52             | IFSYM . LPAREN expression RPAREN $@9 compound_statement $@10 ELSESYM compound_statement

    LPAREN  shift, and go to state 60


State 15

   55 read_statement: READSYM . LPAREN var RPAREN SEMICOLON

    LPAREN  shift, and go to state 61


State 16

   23 typeenum: REALSYM .

    $default  reduce using rule 23 (typeenum)


State 17

   21 typeenum: STRINGSYM .

    $default  reduce using rule 21 (typeenum)


State 18

   53 while_statement: WHILESYM . LPAREN expression RPAREN compound_statement

    LPAREN  shift, and go to state 62


State 19

   54 write_statement: WRITESYM . LPAREN expression RPAREN SEMICOLON

    LPAREN  shift, and go to state 63


State 20

   56 compound_statement: LBRACE . statement_list RBRACE

    BOOLSYM      shift, and go to state 6
    BREAKSYM     shift, and go to state 7
    CHARSYM      shift, and go to state 8
    CONSTSYM     shift, and go to state 9
    CONTINUESYM  shift, and go to state 10
    DOSYM        shift, and go to state 11
    FORSYM       shift, and go to state 12
    INTSYM       shift, and go to state 13
    IFSYM        shift, and go to state 14
    READSYM      shift, and go to state 15
    REALSYM      shift, and go to state 16
    STRINGSYM    shift, and go to state 17
    WHILESYM     shift, and go to state 18
    WRITESYM     shift, and go to state 19
    LBRACE       shift, and go to state 20
    INCPLUS      shift, and go to state 21
    INCMINUS     shift, and go to state 22
    LPAREN       shift, and go to state 23
    SEMICOLON    shift, and go to state 24
    NOT          shift, and go to state 25
    YAJU         shift, and go to state 26
    IDENT        shift, and go to state 27
    INTEGER      shift, and go to state 28
    STRING       shift, and go to state 29
    CHAR         shift, and go to state 30
    BOOL         shift, and go to state 31
    REAL         shift, and go to state 32

    BOOLSYM      [reduce using rule 6 (declaration_list)]
    BOOLSYM      [reduce using rule 33 (statement_list)]
    BOOLSYM      [reduce using rule 45 (statement)]
    BREAKSYM     [reduce using rule 6 (declaration_list)]
    BREAKSYM     [reduce using rule 33 (statement_list)]
    BREAKSYM     [reduce using rule 45 (statement)]
    CHARSYM      [reduce using rule 6 (declaration_list)]
    CHARSYM      [reduce using rule 33 (statement_list)]
    CHARSYM      [reduce using rule 45 (statement)]
    CONSTSYM     [reduce using rule 6 (declaration_list)]
    CONSTSYM     [reduce using rule 33 (statement_list)]
    CONSTSYM     [reduce using rule 45 (statement)]
    CONTINUESYM  [reduce using rule 6 (declaration_list)]
    CONTINUESYM  [reduce using rule 33 (statement_list)]
    CONTINUESYM  [reduce using rule 45 (statement)]
    DOSYM        [reduce using rule 6 (declaration_list)]
    DOSYM        [reduce using rule 33 (statement_list)]
    DOSYM        [reduce using rule 45 (statement)]
    FORSYM       [reduce using rule 6 (declaration_list)]
    FORSYM       [reduce using rule 33 (statement_list)]
    FORSYM       [reduce using rule 45 (statement)]
    INTSYM       [reduce using rule 6 (declaration_list)]
    INTSYM       [reduce using rule 33 (statement_list)]
    INTSYM       [reduce using rule 45 (statement)]
    IFSYM        [reduce using rule 6 (declaration_list)]
    IFSYM        [reduce using rule 33 (statement_list)]
    IFSYM        [reduce using rule 45 (statement)]
    READSYM      [reduce using rule 6 (declaration_list)]
    READSYM      [reduce using rule 33 (statement_list)]
    READSYM      [reduce using rule 45 (statement)]
    REALSYM      [reduce using rule 6 (declaration_list)]
    REALSYM      [reduce using rule 33 (statement_list)]
    REALSYM      [reduce using rule 45 (statement)]
    STRINGSYM    [reduce using rule 6 (declaration_list)]
    STRINGSYM    [reduce using rule 33 (statement_list)]
    STRINGSYM    [reduce using rule 45 (statement)]
    WHILESYM     [reduce using rule 6 (declaration_list)]
    WHILESYM     [reduce using rule 33 (statement_list)]
    WHILESYM     [reduce using rule 45 (statement)]
    WRITESYM     [reduce using rule 6 (declaration_list)]
    WRITESYM     [reduce using rule 33 (statement_list)]
    WRITESYM     [reduce using rule 45 (statement)]
    LBRACE       [reduce using rule 6 (declaration_list)]
    LBRACE       [reduce using rule 33 (statement_list)]
    LBRACE       [reduce using rule 45 (statement)]
    RBRACE       reduce using rule 6 (declaration_list)
    RBRACE       [reduce using rule 33 (statement_list)]
    RBRACE       [reduce using rule 45 (statement)]
    INCPLUS      [reduce using rule 6 (declaration_list)]
    INCPLUS      [reduce using rule 33 (statement_list)]
    INCPLUS      [reduce using rule 45 (statement)]
    INCMINUS     [reduce using rule 6 (declaration_list)]
    INCMINUS     [reduce using rule 33 (statement_list)]
    INCMINUS     [reduce using rule 45 (statement)]
    LPAREN       [reduce using rule 6 (declaration_list)]
    LPAREN       [reduce using rule 33 (statement_list)]
    LPAREN       [reduce using rule 45 (statement)]
    SEMICOLON    [reduce using rule 6 (declaration_list)]
    SEMICOLON    [reduce using rule 33 (statement_list)]
    SEMICOLON    [reduce using rule 45 (statement)]
    NOT          [reduce using rule 6 (declaration_list)]
    NOT          [reduce using rule 33 (statement_list)]
    NOT          [reduce using rule 45 (statement)]
    YAJU         [reduce using rule 6 (declaration_list)]
    YAJU         [reduce using rule 33 (statement_list)]
    YAJU         [reduce using rule 45 (statement)]
    IDENT        [reduce using rule 6 (declaration_list)]
    IDENT        [reduce using rule 33 (statement_list)]
    IDENT        [reduce using rule 45 (statement)]
    INTEGER      [reduce using rule 6 (declaration_list)]
    INTEGER      [reduce using rule 33 (statement_list)]
    INTEGER      [reduce using rule 45 (statement)]
    STRING       [reduce using rule 6 (declaration_list)]
    STRING       [reduce using rule 33 (statement_list)]
    STRING       [reduce using rule 45 (statement)]
    CHAR         [reduce using rule 6 (declaration_list)]
    CHAR         [reduce using rule 33 (statement_list)]
    CHAR         [reduce using rule 45 (statement)]
    BOOL         [reduce using rule 6 (declaration_list)]
    BOOL         [reduce using rule 33 (statement_list)]
    BOOL         [reduce using rule 45 (statement)]
    REAL         [reduce using rule 6 (declaration_list)]
    REAL         [reduce using rule 33 (statement_list)]
    REAL         [reduce using rule 45 (statement)]
    $default     reduce using rule 6 (declaration_list)

    declaration_list      go to state 33
    declaration_stat      go to state 34
    typeenum              go to state 35
    statement_list        go to state 64
    statement             go to state 37
    continue_stat         go to state 38
    break_stat            go to state 39
    if_statement          go to state 40
    while_statement       go to state 41
    write_statement       go to state 42
    read_statement        go to state 43
    compound_statement    go to state 44
    for_statement         go to state 45
    do_statement          go to state 46
    var                   go to state 47
    expression_statement  go to state 48
    expression            go to state 49
    simple_expr           go to state 50
    SINGLEOPR             go to state 51
    additive_expr         go to state 52
    term                  go to state 53
    factor                go to state 54


State 21

   72 SINGLEOPR: INCPLUS .

    $default  reduce using rule 72 (SINGLEOPR)


State 22

   73 SINGLEOPR: INCMINUS .

    $default  reduce using rule 73 (SINGLEOPR)


State 23

   93 factor: LPAREN . expression RPAREN

    INCPLUS   shift, and go to state 21
    INCMINUS  shift, and go to state 22
    LPAREN    shift, and go to state 23
    NOT       shift, and go to state 25
    YAJU      shift, and go to state 26
    IDENT     shift, and go to state 27
    INTEGER   shift, and go to state 28
    STRING    shift, and go to state 29
    CHAR      shift, and go to state 30
    BOOL      shift, and go to state 31
    REAL      shift, and go to state 32

    var            go to state 47
    expression     go to state 65
    simple_expr    go to state 50
    SINGLEOPR      go to state 51
    additive_expr  go to state 52
    term           go to state 53
    factor         go to state 54


State 24

   64 expression_statement: SEMICOLON .

    $default  reduce using rule 64 (expression_statement)


State 25

   74 SINGLEOPR: NOT .

    $default  reduce using rule 74 (SINGLEOPR)


State 26

  100 factor: YAJU .

    $default  reduce using rule 100 (factor)


State 27

   59 var: IDENT .
   60    | IDENT . LBRACKET expression_list RBRACKET

    LBRACKET  shift, and go to state 66

    $default  reduce using rule 59 (var)


State 28

   95 factor: INTEGER .

    $default  reduce using rule 95 (factor)


State 29

   97 factor: STRING .

    $default  reduce using rule 97 (factor)


State 30

   99 factor: CHAR .

    $default  reduce using rule 99 (factor)


State 31

   98 factor: BOOL .

    $default  reduce using rule 98 (factor)


State 32

   96 factor: REAL .

    $default  reduce using rule 96 (factor)


State 33

    4 declaration_list: declaration_list . declaration_stat
   42 statement: declaration_list .

    BOOLSYM    shift, and go to state 6
    CHARSYM    shift, and go to state 8
    CONSTSYM   shift, and go to state 9
    INTSYM     shift, and go to state 13
    REALSYM    shift, and go to state 16
    STRINGSYM  shift, and go to state 17

    BOOLSYM    [reduce using rule 42 (statement)]
    CHARSYM    [reduce using rule 42 (statement)]
    CONSTSYM   [reduce using rule 42 (statement)]
    INTSYM     [reduce using rule 42 (statement)]
    REALSYM    [reduce using rule 42 (statement)]
    STRINGSYM  [reduce using rule 42 (statement)]
    $default   reduce using rule 42 (statement)

    declaration_stat  go to state 67
    typeenum          go to state 35


State 34

    5 declaration_list: declaration_stat .

    $default  reduce using rule 5 (declaration_list)


State 35

    7 declaration_stat: typeenum . identlist SEMICOLON
    9                 | typeenum . identarraylist $@3 SEMICOLON

    IDENT  shift, and go to state 68

    identlist       go to state 69
    identdef        go to state 70
    identarraylist  go to state 71
    identarraydef   go to state 72


State 36

    3 program: MAINSYM $@1 LBRACE statement_list . $@2 RBRACE
   31 statement_list: statement_list . statement

    BOOLSYM      shift, and go to state 6
    BREAKSYM     shift, and go to state 7
    CHARSYM      shift, and go to state 8
    CONSTSYM     shift, and go to state 9
    CONTINUESYM  shift, and go to state 10
    DOSYM        shift, and go to state 11
    FORSYM       shift, and go to state 12
    INTSYM       shift, and go to state 13
    IFSYM        shift, and go to state 14
    READSYM      shift, and go to state 15
    REALSYM      shift, and go to state 16
    STRINGSYM    shift, and go to state 17
    WHILESYM     shift, and go to state 18
    WRITESYM     shift, and go to state 19
    LBRACE       shift, and go to state 20
    INCPLUS      shift, and go to state 21
    INCMINUS     shift, and go to state 22
    LPAREN       shift, and go to state 23
    SEMICOLON    shift, and go to state 24
    NOT          shift, and go to state 25
    YAJU         shift, and go to state 26
    IDENT        shift, and go to state 27
    INTEGER      shift, and go to state 28
    STRING       shift, and go to state 29
    CHAR         shift, and go to state 30
    BOOL         shift, and go to state 31
    REAL         shift, and go to state 32

    BOOLSYM      [reduce using rule 6 (declaration_list)]
    BOOLSYM      [reduce using rule 45 (statement)]
    BREAKSYM     [reduce using rule 6 (declaration_list)]
    BREAKSYM     [reduce using rule 45 (statement)]
    CHARSYM      [reduce using rule 6 (declaration_list)]
    CHARSYM      [reduce using rule 45 (statement)]
    CONSTSYM     [reduce using rule 6 (declaration_list)]
    CONSTSYM     [reduce using rule 45 (statement)]
    CONTINUESYM  [reduce using rule 6 (declaration_list)]
    CONTINUESYM  [reduce using rule 45 (statement)]
    DOSYM        [reduce using rule 6 (declaration_list)]
    DOSYM        [reduce using rule 45 (statement)]
    FORSYM       [reduce using rule 6 (declaration_list)]
    FORSYM       [reduce using rule 45 (statement)]
    INTSYM       [reduce using rule 6 (declaration_list)]
    INTSYM       [reduce using rule 45 (statement)]
    IFSYM        [reduce using rule 6 (declaration_list)]
    IFSYM        [reduce using rule 45 (statement)]
    READSYM      [reduce using rule 6 (declaration_list)]
    READSYM      [reduce using rule 45 (statement)]
    REALSYM      [reduce using rule 6 (declaration_list)]
    REALSYM      [reduce using rule 45 (statement)]
    STRINGSYM    [reduce using rule 6 (declaration_list)]
    STRINGSYM    [reduce using rule 45 (statement)]
    WHILESYM     [reduce using rule 6 (declaration_list)]
    WHILESYM     [reduce using rule 45 (statement)]
    WRITESYM     [reduce using rule 6 (declaration_list)]
    WRITESYM     [reduce using rule 45 (statement)]
    LBRACE       [reduce using rule 6 (declaration_list)]
    LBRACE       [reduce using rule 45 (statement)]
    RBRACE       reduce using rule 2 ($@2)
    RBRACE       [reduce using rule 6 (declaration_list)]
    RBRACE       [reduce using rule 45 (statement)]
    INCPLUS      [reduce using rule 6 (declaration_list)]
    INCPLUS      [reduce using rule 45 (statement)]
    INCMINUS     [reduce using rule 6 (declaration_list)]
    INCMINUS     [reduce using rule 45 (statement)]
    LPAREN       [reduce using rule 6 (declaration_list)]
    LPAREN       [reduce using rule 45 (statement)]
    SEMICOLON    [reduce using rule 6 (declaration_list)]
    SEMICOLON    [reduce using rule 45 (statement)]
    NOT          [reduce using rule 6 (declaration_list)]
    NOT          [reduce using rule 45 (statement)]
    YAJU         [reduce using rule 6 (declaration_list)]
    YAJU         [reduce using rule 45 (statement)]
    IDENT        [reduce using rule 6 (declaration_list)]
    IDENT        [reduce using rule 45 (statement)]
    INTEGER      [reduce using rule 6 (declaration_list)]
    INTEGER      [reduce using rule 45 (statement)]
    STRING       [reduce using rule 6 (declaration_list)]
    STRING       [reduce using rule 45 (statement)]
    CHAR         [reduce using rule 6 (declaration_list)]
    CHAR         [reduce using rule 45 (statement)]
    BOOL         [reduce using rule 6 (declaration_list)]
    BOOL         [reduce using rule 45 (statement)]
    REAL         [reduce using rule 6 (declaration_list)]
    REAL         [reduce using rule 45 (statement)]
    $default     reduce using rule 2 ($@2)

    $@2                   go to state 73
    declaration_list      go to state 33
    declaration_stat      go to state 34
    typeenum              go to state 35
    statement             go to state 74
    continue_stat         go to state 38
    break_stat            go to state 39
    if_statement          go to state 40
    while_statement       go to state 41
    write_statement       go to state 42
    read_statement        go to state 43
    compound_statement    go to state 44
    for_statement         go to state 45
    do_statement          go to state 46
    var                   go to state 47
    expression_statement  go to state 48
    expression            go to state 49
    simple_expr           go to state 50
    SINGLEOPR             go to state 51
    additive_expr         go to state 52
    term                  go to state 53
    factor                go to state 54


State 37

   32 statement_list: statement .

    $default  reduce using rule 32 (statement_list)


State 38

   43 statement: continue_stat .

    $default  reduce using rule 43 (statement)


State 39

   44 statement: break_stat .

    $default  reduce using rule 44 (statement)


State 40

   35 statement: if_statement .

    $default  reduce using rule 35 (statement)


State 41

   36 statement: while_statement .

    $default  reduce using rule 36 (statement)


State 42

   38 statement: write_statement .

    $default  reduce using rule 38 (statement)


State 43

   37 statement: read_statement .

    $default  reduce using rule 37 (statement)


State 44

   39 statement: compound_statement .

    $default  reduce using rule 39 (statement)


State 45

   40 statement: for_statement .

    $default  reduce using rule 40 (statement)


State 46

   41 statement: do_statement .

    $default  reduce using rule 41 (statement)


State 47

   66 expression: var . $@11 BECOMES expression
   94 factor: var .

    BECOMES   reduce using rule 65 ($@11)
    $default  reduce using rule 94 (factor)

    $@11  go to state 75


State 48

   34 statement: expression_statement .

    $default  reduce using rule 34 (statement)


State 49

   63 expression_statement: expression . SEMICOLON

    SEMICOLON  shift, and go to state 76


State 50

   67 expression: simple_expr .

    $default  reduce using rule 67 (expression)


State 51

   71 simple_expr: SINGLEOPR . additive_expr

    LPAREN   shift, and go to state 23
    YAJU     shift, and go to state 26
    IDENT    shift, and go to state 27
    INTEGER  shift, and go to state 28
    STRING   shift, and go to state 29
    CHAR     shift, and go to state 30
    BOOL     shift, and go to state 31
    REAL     shift, and go to state 32

    var            go to state 77
    additive_expr  go to state 78
    term           go to state 53
    factor         go to state 54


State 52
